--- a/islands.config.json
+++ b/islands.config.json
@@ -1,7 +1,5 @@
 {
-	"islands": {
-		"Navigation": "./assets/scripts/src/islands/navigation/index.tsx"
-	},
+	"islands": {},
 	"output": "./assets/scripts/dist/",
 	"define": {
 		"__ASSETS_PATH__": "/wp-content/themes/cooper/assets"
